# catfacts-jinja2

./: .gitignore  LICENSE  README.md  catfacts-jinja2.py  pyproject.toml
templates/: catfacts.html
