[tool.poetry]
name = "catfacts-jinja2"
version = "0.1.0"
description = ""
authors = ["Ulises Alexander Arguelles Monjaraz <ulises_alexander_am@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "catfacts_jinja2"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
Jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
